# GoblinPay

./: .gitignore  BADGE-INTEGRATION.md  Cargo.toml  README.md  TOR-MIGRATION-PLAN.md  ci.sh  rustfmt.toml
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
connectors/medusa/: INSTALL.md  README.md  package.json  tsconfig.json
connectors/medusa/src/: index.ts  service.ts  types.ts
connectors/woocommerce/: INSTALL.md  README.md  goblinpay-woocommerce.php
connectors/woocommerce/assets/js/: blocks.js
connectors/woocommerce/includes/: class-blocks.php
crates/gp-core/: Cargo.toml
crates/gp-core/src/: config.rs  db.rs  derive.rs  endpub.rs  ids.rs  invoice.rs  lib.rs  matching.rs  qr.rs  rates.rs  setup.rs  store.rs  webhook.rs
crates/gp-goblin-sender/: Cargo.toml
crates/gp-goblin-sender/src/: main.rs
crates/gp-nostr/: Cargo.toml
crates/gp-nostr/src/: identity.rs  ingest.rs  lib.rs  protocol.rs  receipt.rs  relays.rs  service.rs  wrap.rs
crates/gp-nostr/src/nym/: dns.rs  mod.rs  nymproc.rs  transport.rs
crates/gp-server/: Cargo.toml  askama.toml
crates/gp-server/src/: admin.rs  auth.rs  checkout.rs  directory.rs  foreign.rs  ingest.rs  invoices.rs  lib.rs  main.rs  payments.rs  record.rs  setup.rs  tor.rs  webhookd.rs
crates/gp-server/tests/: checkout_e2e.rs  nostr_ingest_e2e.rs  tor_roundtrip.rs
crates/gp-wallet/: Cargo.toml
crates/gp-wallet/src/: confirm.rs  lib.rs  proof.rs
crates/gp-wallet/tests/: goblin_roundtrip.rs  proof_roundtrip.rs
deploy/: .env.example  Caddyfile  Dockerfile  docker-compose.yml  gp-server.service  install.sh  package-woocommerce.sh
deploy/relay/: nostr-rs-relay.toml
docs/: api-integration.md  medusa-quickstart.md  woocommerce-quickstart.md
migrations/: 0001_init.sql  0002_reply.sql  0003_confirm.sql  0004_invoices.sql  0005_endpubs.sql  0006_webhook.sql  0007_rates.sql  0008_confirmations.sql  0009_grin1_rail.sql
static/: style.css
templates/: admin.html  base.html  index.html  pay.html  pay_result.html
