[workspace]
resolver = "2"
members = [
    "crates/gp-wallet",
    "crates/gp-goblin-sender",
    "crates/gp-nostr",
    "crates/gp-core",
    "crates/gp-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "macros",
] }
tokio = { version = "1", default-features = false }

[profile.release]
opt-level = 2
strip = true
