[workspace]
resolver = "2"
members = [
    "crates/gp-wallet",
    "crates/gp-goblin-sender",
    "crates/gp-nostr",
    "crates/gp-core",
    "crates/gp-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# sqlx 0.9: its libsqlite3-sys range (>=0.30.1, <0.38) unifies with the
# rusqlite inside arti's tor-dirmgr (libsqlite3-sys 0.34) — cargo's one-
# `links = "sqlite3"` rule otherwise forbids linking sqlx-sqlite and the grin1
# rail's in-process arti in one binary. 0.9 split the old runtime-tokio-rustls
# feature: TLS is a network-database concern, so SQLite needs none of it.
# `sqlite` = bundled, as before.
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
] }
tokio = { version = "1", default-features = false }

[profile.release]
opt-level = 2
strip = true
