[package]
name = "gp-server"
description = "GoblinPay HTTP server (Actix-Web, in-process rustls TLS)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gp-server"
path = "src/main.rs"

[dependencies]
gp-core = { path = "../gp-core" }
gp-nostr = { path = "../gp-nostr" }
gp-wallet = { path = "../gp-wallet" }
actix-web = { version = "4", default-features = false, features = [
    "macros",
    "http2",
    "rustls-0_23",
] }
askama = "0.14"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
rustls-pemfile = "2"
serde = { workspace = true }
serde_json.workspace = true
sqlx = { workspace = true }
log = "0.4"
# Outbound webhook delivery. `rustls-no-provider` reuses the process-installed
# ring crypto provider (no aws-lc-rs build) and brings platform-verifier roots;
# no JSON feature (we send a pre-signed body).
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
# Stderr logger for the gp-nostr `log` output; no regex filtering needed.
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }

# grin1 rail onion transport (Phase 1): the GRIM tor stack, versions matched to
# grim/Cargo.toml (grim/src/tor/tor.rs is the reference; its start_service /
# run_service_proxy / add_service_key are ported in src/tor.rs).
# `onion-service-client` is needed by the round-trip self-check (dialing our own
# .onion); `pt-client` (bridges) deliberately not pulled in — a server has no
# censor to evade.
arti-client = { version = "0.43.0", features = ["static", "onion-service-service", "onion-service-client"] }
tor-rtcompat = { version = "0.43.0", features = ["static"] }
fs-mistrust = "0.14.2"
tor-hsservice = "0.43.0"
tor-hsrproxy = "0.43.0"
tor-keymgr = "0.43.0"
tor-llcrypto = "0.43.0"
tor-hscrypto = "0.43.0"
safelog = "0.8.1"
futures = "0.3"
# The onion identity expansion (ed25519 seed -> expanded keypair), exactly
# GRIM's: SHA-512 the 32-byte address seed into dalek's hazmat expanded form.
# dalek 2 here coexists with gp-wallet's pinned 1.0.1 (different major line).
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["hazmat"] }

[dev-dependencies]
# The milestone-3 end-to-end test: a stand-in payer built from nostr-sdk
# gift-wraps a REAL S1 (generated by the gp-goblin-sender subprocess), the
# ingest pipeline receives it through the real WalletReceiver, and the reply
# is decrypted and finalized by Goblin's wallet stack.
nostr-sdk = { version = "0.44", features = ["nip44", "nip49", "nip59"] }
nip44 = { path = "../../../nip44" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rand = "0.6"
grin_keychain = "=5.4.1"
grin_core = "=5.4.1"
# The real-Tor round-trip self-check (tests/tor_roundtrip.rs): hyper drives
# HTTP/1.1 over the arti DataStream to our own onion, GRIM's client pattern.
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
